--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 NEXT_PUBLIC_USE_USER_KEY=false
 # OPENAI_MODEL=text-chat-davinci-002-20221122
 OPENAI_MODEL=text-davinci-003
